syntax = "proto3";

package com.road.yishi.proto.market;

message MarketOrderMsg {
  string orderId = 1;
  int32 type = 2;
  int32 templateId = 3;
  int32 count = 4;
  int32 point = 5;
  int32 status = 6;
  string createTime = 7;
  bool extract = 8;
  int32 tradingPoint = 9;
  int32 tax = 10;
  bool isExist = 11;
  string actionTime = 12;
}
